fixed navbar overlapping scroll

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,12 +7,12 @@
     @apply 3xl:min-w-[1920px] 2xl:min-w-[1536px] xl:min-w-[1280px] lg:min-w-[1024px] md:min-w-[768px] sm:min-w-[640px] xs:min-w-[360px];
   }
 } */
-@layer base {
+/* @layer base {
   body {
     @apply antialiased;
     @apply h-screen;
   }
-}
+} */
 
 :root {
   --max-width: 1100px;
